lib/stratiform/res/test/stratiform/corpus/neg/e210-unresolved-reference.tel
tel 1.0 https://tel-lang.org/schema/tel-schema

name e212-test

document
  field foo does-not-exist
